2000-02-03  Darren Stuart Embry  <dsembr01@slug.louisville.edu>

	* fvwm/menus.c (paint_item):
	* fvwm/menus.c (NewMenuStyle):
	fixed ActiveColorstyle for menus; would not work without also
	setting HilightBack and ActiveFore.

2000-02-03  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/functions.c (execute_complex_function):
	fixed duoble click move tolerance

	* fvwm/placement.c (test_fit):
	removed debug code

2000-02-02  Dan Espen  <dane@mk.telcordia.com>

	* fvwm/module_interface.c (HandleModuleInput): Access module message
	header fields as longs, for Tru64 UNIX.

2000-02-02  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/style.c (ProcessNewStyle):
	fixed problem with Clever/Smart placement

2000-02-02  Brad Giaccio  <bgiaccio@psrw.com>

	* fvwm/menus.c (menuShortcuts): set inital value for ckeychar to get
	rid of UMR [could have done without but this cleans up purify nicelly]

	* fvwm/builtins.c (ReadDecorFace): fixed ABR caused by faulty pointer
	increment

2000-02-02  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/borders.c (RedrawBorder):
	fixed noinset fvwm borders

	* fvwm/functions.c (ExecuteFunction):
	fixed memory leak in function code (hopefully)

	* fvwm/style.c (merge_style_list):
	fixed memory leak when merging the style list

2000-01-31  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/style.c (merge_styles):
	* fvwm/update.c (apply_window_updates):
	* fvwm/add_window.c (setup_style_and_decor):
	* fvwm/builtins.c (setShadeAnim):
	fixed 'WindowShadeSteps' style

	* fvwm/style.c (ProcessNewStyle):
	(check_window_style_change):
	* fvwm/style.h:
	* fvwm/window_flags.h:
	* fvwm/fvwm.h:
	* fvwm/style.c (ProcessNewStyle):
	* fvwm/placement.c (PlaceWindow):
	* fvwm/session.c (SaveGlobalState):
	(LoadGlobalState):
	* fvwm/borders.c (RedrawTitle):
	* fvwm/add_window.c (setup_focus_policy):
	(regrab_focus_win):
	* fvwm/events.c (HandleButtonPress):
	* fvwm/builtins.c (SetGlobalOptions):
	removed GlobalOpts and WIndowShadeAnimate commands in favour of styles
